iOS : add support for  experimental Metal rendering  backend , ability to choose between GLES2 or Metal

--- a/template/IOS/CMakeLists.txt
+++ b/template/IOS/CMakeLists.txt
@@ -53,6 +53,7 @@ set (LIBS
     "-framework GSS"
     "-framework CFNetwork"
     "-framework SystemConfiguration"
+    "-framework Metal"
 )
 set(BITCODE "")
 set(CMAKE_XCODE_ATTRIBUTE_ENABLE_BITCODE "NO" CACHE INTERNAL "")
