Support Android  build from the VS code editor

--- a/template/.vscode/tasks.json
+++ b/template/.vscode/tasks.json
@@ -54,6 +54,24 @@
             "problemMatcher": []
         },
         {
+            "label": "android-build-debug",
+            "command": "./script/build-android-debug.sh",
+            "windows":{
+                "command": "call ./tools/bash/git-bash.exe script/build-android-debug.sh"
+            },
+            "type": "shell",
+            "problemMatcher": []
+        },
+        {
+            "label": "android-build-release",
+            "command": "./script/build-android-release.sh",
+            "windows":{
+                "command": "call ./tools/bash/git-bash.exe script/build-android-release.sh"
+            },
+            "type": "shell",
+            "problemMatcher": []
+        },
+        {
             "label": "build",
             "command": "dotnet",
             "type": "process",
