--- a/template/.vscode/tasks.json
+++ b/template/.vscode/tasks.json
@@ -55,20 +55,39 @@
         },
         {
             "label": "android-build-debug",
-            "command": "./script/build-android-debug.sh",
+            "command": "./script/build-android.sh",
             "windows":{
-                "command": "call \"tools/bash/git-bash.exe\" script/build-android-debug.sh"
+                "command": "call \"tools/bash/git-bash.exe\" script/build-android.sh"
             },
             "type": "shell",
+            "args": [
+                "-b","debug"
+            ],
+            "problemMatcher": []
+        },
+        {
+            "label": "android-deploy-debug",
+            "command": "./script/build-android.sh",
+            "windows":{
+                "command": "call \"tools/bash/git-bash.exe\" script/build-android.sh"
+            },
+            "type": "shell",
+            "args": [
+                "-b","debug",
+                "-d","1"
+            ],
             "problemMatcher": []
         },
         {
             "label": "android-build-release",
-            "command": "./script/build-android-release.sh",
+            "command": "./script/build-android.sh",
             "windows":{
-                "command": "call \"tools/bash/git-bash.exe\" script/build-android-release.sh"
+                "command": "call \"tools/bash/git-bash.exe\" script/build-android.sh"
             },
             "type": "shell",
+            "args": [
+                "-b","release"
+            ],
             "problemMatcher": []
         },
         {
