Add clean task , clean entire project , removing all generated folders during the build process

--- a/template/.vscode/tasks.json
+++ b/template/.vscode/tasks.json
@@ -106,6 +106,18 @@
             "problemMatcher": []
         },
         {
+            "label": "clean",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "clean",
+                "${workspaceFolder}/${workspaceFolderBasename}.csproj",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
             "label": "build",
             "command": "dotnet",
             "type": "process",
