--- a/template/IOS/CMake/Modules/MacOSXBundleInfo.plist.template
+++ b/template/IOS/CMake/Modules/MacOSXBundleInfo.plist.template
@@ -25,7 +25,7 @@
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleVersion</key>
-    <string>${MACOSX_BUNDLE_BUNDLE_VERSION}</string>
+    <string>1.7.1374</string>
     <key>LSMinimumSystemVersion</key>
     <string>$(MACOSX_DEPLOYMENT_TARGET)</string>
     <key>CSResourcesFileMapped</key>
